--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <div class="container">
     <h2 align="center">Ajude a Realizar Sonhos!</h2>
-    <p>Vera Cruz SP está mais do que nunca de sua ajuda para ajudar famílias carentes que passam por necessidades em seu dia a dia, por isso essa vaquinha online foi criada! Agora é sua chance de poder ajudar essas pessoas que não podem desfrutar da felicidade da vida por conta da pobreza extrema a qual estão sendo expostas, conto com sua ajuda para transformarmos vidas que esperam por uma alma bondosa que estaja desposta a os reconhecerem como humanos com direito a uma vida digna. </p>
+    <p>Vera Cruz SP está mais do que nunca precisando de sua ajuda para ajudar famílias carentes que passam por necessidades em seu dia a dia, por isso essa vaquinha online foi criada! Agora é sua chance de poder ajudar essas pessoas que não podem desfrutar da felicidade da vida por conta da pobreza extrema a qual estão sendo expostas, conto com sua ajuda para transformarmos vidas que esperam por uma alma bondosa que estaja desposta a os reconhecerem como humanos com direito a uma vida digna. </p>
     
     <div class="campaign">
         <div class="imagem"> 
